# django-querylens

./: CHANGELOG.md  README.md  pyproject.toml
django_ormlens/: __init__.py  admin.py  analyzer.py  apps.py  decorators.py  formatters.py  middleware.py  signals.py  store.py
django_ormlens/management/commands/: ormlens_report.py
django_querylens/: __init__.py  admin.py  analyzer.py  apps.py  decorators.py  formatters.py  middleware.py  signals.py  store.py
django_querylens/management/commands/: querylens_report.py
tests/: __init__.py  conftest.py  settings.py  test_admin.py  test_analyzer.py  test_decorators.py  test_formatters.py  test_management.py  test_middleware.py  test_signals.py  test_store.py  urls.py
