[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-ormlens"
version = "0.1.0"
description = "Django ORM query visualizer with N+1 detection and index suggestions"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["django", "orm", "performance", "query", "profiling", "n+1"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Debuggers",
]
authors = [
    { name = "Ahmetcan Dinçer" },
]
dependencies = ["django>=3.2"]

[project.optional-dependencies]
color = ["colorama>=0.4.6"]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "django-stubs>=4.2",
]

[project.urls]
Homepage = "https://github.com/Reyretee/django-querylens"
Repository = "https://github.com/Reyretee/django-querylens"
Issues = "https://github.com/Reyretee/django-querylens/issues"

[tool.hatch.build.targets.wheel]
packages = ["django_ormlens"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["django_ormlens"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]
addopts = "--cov=django_ormlens --cov-report=term-missing"

[tool.coverage.run]
source = ["django_ormlens"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "tests.settings"
